# guardian

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  guardian.yaml  guardian.yaml.example  install.sh  pyproject.toml  requirements.txt
agent/: __init__.py  config.py  enricher.py  generator.py  loader.py  local_alerts.py  main.py  reader.py  sender.py  signer.py
docs/: README.md
docs/01-overview/: eu-ai-act-context.md  problem-statement.md  solution-architecture.md  what-is-guardian.md
docs/02-architecture/: design-decisions.md  event-pipeline.md  guardian-internals.md  system-overview.md  three-layer-platform.md
docs/03-data/: data-flow.md  event-schema.md  grpc-contract.md  guardian-yaml-reference.md
docs/04-security/: batch-signing.md  cryptographic-design.md  event-chaining.md  local-alerts.md  threat-model.md
docs/05-components/: config-loader.md  enricher.md  event-generator.md  loader.md  local-alerts-engine.md  reader.md  sender.md  signer.md
docs/06-ebpf/: bcc-vs-libbpf-vs-aya.md  phase1-vs-phase2.md  probe-architecture.md  what-is-ebpf.md  why-ebpf-for-ai.md
docs/07-phases/: migration-guide.md  phase1-python-agent.md  phase2-real-ebpf.md  phase3-rust-rewrite.md
docs/08-testing/: integration-testing.md  running-tests.md  test-strategy.md  (+1 more)
probe/: guardian.bpf.c  guardian.h
proto/: __init__.py  guardian.proto  guardian_pb2.py  guardian_pb2_grpc.py
scripts/: gen_proto.sh
tests/: __init__.py  test_config.py  test_enricher.py  test_generator.py  test_local_alerts.py  test_signer.py
tools/: demo.py  dev.sh  dev_server.py  dev_ui.html
(+20 files in other folders)
